Fix: overflow issue in Gallery screen

--- a/screens/gallery/src/styles.module.scss
+++ b/screens/gallery/src/styles.module.scss
@@ -35,6 +35,7 @@
     }
 
     .imageContainer {
+        overflow: hidden;
         position: relative;
         flex-grow: 1;
     }
